Resolved layout inconsistencies and improved UI alignment

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -115,6 +115,25 @@
     left: 20px;
     bottom: 20px;
   }
+
+  .home-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    margin: 0px 10px;
+  }
+  
+  .home-section img:nth-child(1) {
+    width: 90%;
+    height: fit-content;
+  }
+  
+  .home-section img:nth-child(2) {
+    width: 40%;
+    height: fit-content;
+  }
 }
 
 @media screen and (max-width: 1020px) {
